# hyq-description

./: CMakeLists.txt
gazebo/: gazebo.urdf.xacro
gazebo_plugins/: CMakeLists.txt
gazebo_plugins/include/: hyq_joint_angle_control.h  inv_dyn_hyq.h  rtwtypes.h
gazebo_plugins/src/: hyq_joint_angle_control.cpp  inv_dyn_hyq.cpp  inv_dyn_hyq_data.cpp
launch/: hyq_test.launch
scripts/: go0
worlds/: hyq_empty.world
